--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -96,17 +96,13 @@
                 <div class="question"> 
                     <!-- Present every document as an accordion-->
                     <button class="accordion">
-                        <img src="{{ question.thumbnail }}" alt="" /> 
-                        <h3>&nbsp;&nbsp;&nbsp;&nbsp;{{ question.question_name }}</h3>
-                        {% if question.cert_type == "Part Modeling" %}
-                            <div class="cert cert_part">PART</div>
-                        {% elif question.cert_type == "Multi-Step" %}
-                            <div class="cert cert_ms">MS</div>
-                        {% elif question.cert_type == "Assembly" %}
-                            <div class="cert cert_assem">ASSEM</div>
-                        {% elif question.cert_type == "Multi-Part" %}
-                            <div class="cert cert_mp">MP</div>
-                        {% endif %}
+                        <img src="{{ question.thumbnail }}" alt="" />
+                        <div>
+                            <div class="challenge_title">{{ question.question_name }}</div>
+                            {% if question.cert_type %}
+                                <div class="cert_title"><span class="cert_tag">CERT</span> {{ question.cert_type }}</div>
+                            {% endif %}
+                        </div>
                     </button>
                     <div class="panel">
                         <ul class="info_list">
