--- a/questioner/static/questioner/index.css
+++ b/questioner/static/questioner/index.css
@@ -171,8 +171,21 @@ input[type=submit]:hover {
 }
 
 /* Certificates */
-.cert_image {
-    width: 100%;
+
+.cert_image img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60%;
+    border: 1px solid #777;
+}
+
+.cert_logo img {
+    max-width: 25%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 
 .cert_div {
