--- a/questioner/templates/questioner/dashboard.html
+++ b/questioner/templates/questioner/dashboard.html
@@ -26,7 +26,7 @@
                 <p><strong>Certificates</strong></p>
                 {% for certificate in certificates %}
                     {% if certificate.2|length == 0 %}
-                        <p>You have earned <a target="_blank" href="{% url 'questioner:certificate' user.os_user_id certificate.0 certificate.3 certificate.4 %}">{{ certificate.0 }}</a></p>
+                        <p>You have earned <a target="_blank" href="{% url 'questioner:certificate' user.os_user_id certificate.3 certificate.4 %}">{{ certificate.0 }}</a></p>
                     {% else %}
                         <p>You must complete {% if certificate.2|length == 1 %}challenge{% else %}challenges{% endif %} {% for cert in certificate.2 %}{{cert}}, {% endfor %}to earn {{ certificate.0 }}</p>
                     {% endif %}
