--- a/questioner/templates/questioner/certificate.html
+++ b/questioner/templates/questioner/certificate.html
@@ -10,6 +10,6 @@
     
         <div class="cert_logo"><img src="{% static 'questioner/images/logo.svg' %}" /></div>
         <div class="cert_image"><img src="data:image/png;base64,{{ cert_image }}"/></div>    
-        
+        <div class="cert_download"><a href="data:image/png;base64,{{ cert_image }}" download="modeling_certificate.png">Download Certificate</a></div>
     </body>
 </html>
