--- a/questioner/templates/questioner/dashboard.html
+++ b/questioner/templates/questioner/dashboard.html
@@ -28,7 +28,7 @@
                     {% if certificate.2|length == 0 %}
                         <p>You have earned <a target="_blank" href="{% url 'questioner:certificate' user.os_user_id certificate.3 certificate.4 %}">{{ certificate.0 }}</a></p>
                     {% else %}
-                        <p>You must complete {% if certificate.2|length == 1 %}challenge{% else %}challenges{% endif %} {% for cert in certificate.2 %}{{cert}}, {% endfor %}to earn {{ certificate.0 }}</p>
+                        <p>You must complete {% if certificate.2|length == 1 %}challenge:{% else %}challenges: {% endif %} {% for cert in certificate.2 %}{% for question in questions %}{% if question.question_id == cert %}{{ question.question_name }}{% endif %}{% endfor %}, {% endfor %}to earn {{ certificate.0 }}</p>
                     {% endif %}
                 {% endfor %}
             {% endif %}
