--- a/questioner/templates/questioner/index.html
+++ b/questioner/templates/questioner/index.html
@@ -20,6 +20,17 @@
                 <p id="err_msg"><strong>{{ error_message }}</strong></p>
             {% endif %}
         </div>
+        <!-- Leaderboard -->
+        <div>
+            <h3 class="leaderboard">HIGH SCORES</h3>
+            <ol class="leaderboard players">
+                <li>MWS 0:13</li>
+                <li>ABC 0:26</li>
+                <li>JFK 0:39</li>
+                <li>MLK 1:13</li>
+                <li>LDV 2:13</li>
+            </ol>
+        </div>
         <!-- General instructions -->
         <div>
             <h3>Instructions:</h3>
